update sens plot

--- a/day2/PBPKpresentation.Rmd
+++ b/day2/PBPKpresentation.Rmd
@@ -480,7 +480,7 @@ out_sens <-
   parseq_fct(.n=3) %>% 
   sens_each(delta = 0.1, recsort=3, obsonly=TRUE, end = 12)
 
-sens_plot(out_sens, "CP", grid = TRUE) 
+sens_plot(out_sens, "CP") 
 
 # graphical sensitivity for a grid of parameters
 out_sens_grid <- 
@@ -639,7 +639,8 @@ gp
 
 check out:
 
-- vignette for MAP Bayes parameter estimation: https://mrgsolve.github.io/blog/map_bayes.html 
+- vignettes for MAP Bayes parameter estimation: https://mrgsolve.org/blog/#category=MAP%20Bayes
+- MAP Bayes with mrgsolve/mapbayr package https://github.com/FelicienLL/mapbayr
 - `nlmixr` package for nonlinear mixed effects modeling https://github.com/nlmixrdevelopment/nlmixr
 
 Simulate a 4 mg/kg voriconazole IV infusion dosing in a male child subject infused at a rate of 3 mg/kg/h twice a day for seven days. Compare the steady state prediction before and after optimization to the observed data in `Pediatric_IV.csv`.
@@ -977,6 +978,8 @@ Explore the simple shiny app saved as `app.R`
 ![](figures/mAbVPC.png)
 
 https://github.com/metrumresearchgroup/bioPBPK
+
+Compile the mAb bamlanivimab mAb model and simulate a single 700 mg IV infusion dose infused over 2 hours. What are the drug concentrations in plasma and lung on day 28? How do they compare to bamlanivimab IC90 (0.41481 mcg/mL)?
 
 ```{r}
 
