--- a/day1/optimize/tools_optimization_indomethacin.Rmd
+++ b/day1/optimize/tools_optimization_indomethacin.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(comment='.', message=FALSE)
 library(tidyverse)
 theme_set(theme_bw())
 library(mrgsolve)
+library(here)
 ```
 
 # Load indomethacin data set
