--- a/day1/optimize/tools_optimization_intro.Rmd
+++ b/day1/optimize/tools_optimization_intro.Rmd
@@ -6,7 +6,7 @@ date: ""
 
 
 ```{r, setup, echo = FALSE, message = FALSE}
-knitr::opts_chunk$set(comment='.', message =FALSE, root.dir="../")
+knitr::opts_chunk$set(comment='.', message =FALSE)
 options(width = 130)
 ```
 
@@ -358,7 +358,7 @@ ggplot(data = data) +
 # Let's try it
 
 ```{r}
-data <- readRDS(here("data/pdfit.RDS"))
+data <- readRDS(here("day1/data/pdfit.RDS"))
 
 head(data)
 ```
