--- a/day1/slides/rmd/0000_welcome.Rmd
+++ b/day1/slides/rmd/0000_welcome.Rmd
@@ -31,21 +31,21 @@ data <- filter(exidata, ID <= 10)
 set.seed(1222)
 ```
 
-# Example output
+# What can you do with mrgsolve?
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, fig.width = 12, fig.height = 7}
 mod %>% ev(amt = 100) %>% mrgsim(end = 72) %>% plot()
 ```
 
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, fig.width = 12, fig.height = 7}
 mod %>% ev(amt = 100, ii = 24, addl = 4) %>% mrgsim() %>% plot()
 ```
 
 ---
 
-```{r, echo = FALSE, message=FALSE}
+```{r, echo = FALSE, message=FALSE, fig.width = 12, fig.height = 7}
 mod <- mread_cache("popex", modlib()) %>% Req(DV)
 data <- expand.ev(amt = 300, ii = 24, addl = 4, ID = seq(20))
 mod %>% data_set(data) %>% mrgsim() %>% plot()
@@ -53,7 +53,7 @@ mod %>% data_set(data) %>% mrgsim() %>% plot()
 
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, fig.width = 12, fig.height = 7}
 hmod <- mrgsolve:::house() %>% Req(DV,RESP) %>% update(end = 244)
 hdat <- mutate(data, time = 24)
 mrgsim(hmod, data = hdat, omega = dmat(0.1,0.1,0.1,0.1)) %>% plot()
@@ -61,7 +61,7 @@ mrgsim(hmod, data = hdat, omega = dmat(0.1,0.1,0.1,0.1)) %>% plot()
 
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, fig.width = 12, fig.height = 7}
 idata <- tibble(VC = c(20,60,180))
 hmod %>% mrgsim(idata = idata,  end = 24*28, delta = 0.1,
                 events = ev(amt = 100, ii = 24, addl = 28)) %>%
@@ -71,7 +71,7 @@ hmod %>% mrgsim(idata = idata,  end = 24*28, delta = 0.1,
 
 ---
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = FALSE, message = FALSE, fig.width = 12, fig.height = 7}
 mod <- mread_cache("conway", .day1("model"))
 e <- ev(amt = 1, evid = 8, time = 180) + ev(amt = 0, evid = 8, time = 2.5*365)
 idata <- tibble(L_0 = c(1,3,5,7,10))
