--- a/day1/slides/rmd/0020_mread.Rmd
+++ b/day1/slides/rmd/0020_mread.Rmd
@@ -38,7 +38,7 @@ Sys.sleep(2)
 ```
 
 
-# Read in a model object with caching
+# Read in a model object with caching {.drop}
 
 First time to read
 ```{r, include = FALSE, message = FALSE}
@@ -70,28 +70,13 @@ Equivalent to
 mod <- mread("simple", here("day1/model"), soloc = "my_build_directory")
 ```
 
-
-
-
-# Oops 
-```{r}
-mod <- try(mread("simple"))
-
-mod
-```
-
-
 # Internal model library
-
-Quiz:
 
 ```{r, eval = FALSE}
 mod <- mread("<first-argument>", "<second-argument>")
 ```
 
 # Internal model library
-
-Quiz:
 
 ```{r, eval = FALSE}
 mod <- mread("<first-argument>", "<second-argument>")
@@ -119,6 +104,8 @@ mod
 
 # Try this now
 
+Open R script in Rstudio then ...
+
 ```{r, eval = FALSE}
 library(mrgsolve)
 ```
@@ -133,30 +120,9 @@ mod <- mread("pbpk", modlib())
 mod <- modlib("pbpk")
 ```
 
-
-
-# Inline model specification
-
-We <red>haven't covered</red> the specifics of coding a model yet
-
-```{r}
-code <- '
-$PARAM CL = 1, V = 20
-$PKMODEL cmt = "CENT"
-'
-```
-
-```{r, eval = FALSE}
-mod <- mcode("model-name", code)
-```
-
-```{r, eval = FALSE}
-mod <- mcode_cache("model-name", code)
-```
-
 # <red>Your turn</red>
 
-- File name: <grn>exercises/warm_up.R</grn>
+- File name: <grn>day1/exercises/warm_up.R</grn>
 
 - Section name: <blu>Warm Up</blu>
 
