--- a/day2/PBPKpresentation.Rmd
+++ b/day2/PBPKpresentation.Rmd
@@ -1184,3 +1184,154 @@ p_mab_tumor
 
 
 
+---
+
+# PBPKToolkit
+
+PBPKToolkit is an open-source R package that provides a set of functions to be used for PBPK modeling. The functions mainly generate drug- and system-specific parameters required to build a PBPK model. The package is still in early stages of development so submitting any issues would be greatly appreciated to help improve it. This package does not belong to any organization.
+
+```{r}
+library(PBPKToolkit)
+```
+
+## Generate systme-specific parameters
+
+Two functions `genInd` and `genPop` can be used to generate a virtual
+individual or a population, respectively, for PBPK modeling of small
+molecules. The algorithms implemented are adapted from Willmann et al
+2007 [source](https://pubmed.ncbi.nlm.nih.gov/17431751/) and Huisinga et
+al 2012 [source](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3603474/).
+These methods maintains a correlation between the physiologic parameters
+and the sampled individual’s covariates to generate realistic
+individuals. The algorithm is guided by these databases:
+
+-   NHANES data for anthropometric data
+    ([source](https://www.cdc.gov/nchs/nhanes/index.htm)).
+-   ICRP data for physiologic parameters of typical individuals
+    ([source](https://journals.sagepub.com/doi/pdf/10.1177/ANIB_32_3-4)).
+-   Willmann et al 2007 data for organ variability
+    ([source](https://pubmed.ncbi.nlm.nih.gov/17431751/)).
+
+```{r}
+# define the individual demographics
+## You only need to define two of the three covariates: body weight, height, and BMI
+age <- 30
+ismale <- TRUE
+bw <- 73
+ht <- 1.76
+
+# generate individual physiological parameters
+
+## Willmann
+indPars <- genInd(age=age, is.male=ismale, bw_targ=bw, ht_targ=ht, optimize = FALSE, method="Willmann")
+
+## Huisinga
+indPars <- genInd(age=age, is.male=ismale, bw_targ=bw, ht_targ=ht, method="Huisinga")
+
+## run simulation
+modA %>% ev(e) %>% param(indPars) %>% mrgsim() %>% plot
+```
+
+
+## Generate drug-specific parameters
+
+### Calculate tissue:plasma partition coefficients (Kp)
+
+The function `calcKp` can calculate the molecule’s Kp values for
+different organs using one of five different calculation methods:
+
+-   PT: Poulin and Theil
+    ([source](https://pubmed.ncbi.nlm.nih.gov/11782904/)).
+-   RR: Rodgers and Rowland
+    ([source1](https://pubmed.ncbi.nlm.nih.gov/15858854/) and
+    [source2](https://pubmed.ncbi.nlm.nih.gov/16639716/)).
+-   Berez: Berezhkovskiy
+    ([source](https://pubmed.ncbi.nlm.nih.gov/15124219/)).
+-   Schmitt: Schimtt
+    ([source](https://pubmed.ncbi.nlm.nih.gov/17981004/)).
+-   pksim: PK-Sim
+    ([source](https://www.tandfonline.com/doi/abs/10.1517/17425255.1.1.159)).
+
+The function uses the standardized tissue composition database reported
+[here](https://dmd.aspetjournals.org/content/48/10/903)
+
+```{r}
+# define molecule's physicochemical properties
+logP <- 2  #lipophilicity
+pKa <- 1  #acidic strength
+type <- 3  #type of molecule
+BP <- 1  #blood:plasma concentration ratio
+fup <- 0.5  #unbound fraction in plasma
+method <- "PT"  #prediction method
+
+# calculate partition coefficients
+Kps <- calcKp(logP=logP, pKa=pKa, fup=fup, BP=BP, type=type, method=method)
+```
+
+If Vss is available, it can be passed to the argument `Vss` of the
+`calcKp` function that will then scale the calculated Kp values
+accordingly. If `Vss` is provided, the named list containing the
+individual’s physiological parameters also need to be passed to the
+argument `Vt`. `calcKp` will grab the tissue volumes from this list to
+allow for the scaling of the Kp values based on the Vss calculation here
+<https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0054-x>.
+This scaling also requires `Kpot`, which is the partition coefficient
+value for the “other” compartment that lumps all compartments that are
+not defined in the standardized tissue composition database. If `Kpot`
+is left as `NULL`, it will be calculated as the average of all non
+adipose tissues Kp values.
+
+```{r}
+# calculate partition coefficients
+Vss <- 50
+indPars <- genInd(age=age, is.male=ismale, bw_targ=bw, ht_targ=ht, optimize = FALSE)
+Kps <- calcKp(logP=logP, pKa=pKa, fup=fup, BP=BP, type=type, method=method, Vss=Vss, Vt=indPars)
+```
+
+### Calculate blood:plasma concentration ratio (BP)
+
+In case BP parameter was missing, the function `calcBP` can be used to
+calculate BP based on the methods reported
+[here](https://pubmed.ncbi.nlm.nih.gov/20549836/). There are two methods
+to chose from:
+
+-   Method 1: uses molecule’s fup to calculate BP.
+-   Method 2: uses molecule’s logP (or another measurement of
+    lipophilicity like logD) to calculate BP.
+
+Note: drug type = “total” is the default type and it uses the regression
+coefficients calculated by fitting different molecule types (acids,
+bases, and neutrals) together.
+
+```{r}
+# in case BP parameter was missing, the function calcBP
+calcBP(fup = fup, method = 1)
+```
+
+```{r}
+calcBP(logP = logP, fup = fup, method = 2)
+```
+
+### Calculate unbound fraction in plasma (fup)
+
+In case fup parameter was missing, the function `calcFup` can be used to
+calculate fup using the molecule’s logP (or another measurement of
+lipophilicity like logD) based on the method reported
+[here](https://pubmed.ncbi.nlm.nih.gov/20549836/).
+
+```{r}
+calcFup(logP = logP)
+```
+
+### Calculate steady state volume of distribution (Vss)
+
+Predict Vss from estimated partition coefficients and tissue volumes.
+
+```{r}
+calcVss(Kp=Kps, BP=BP, Vt=indPars)
+```
+
+
+
+
+
